--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   --lavender: #E6E6FA
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .bg-hero {
   background-image: url('https://cdn.prod.website-files.com/639b3e775b326dcf7cea3e70/639b3e775b326d7eb5ea3efb_home-hero-bg.svg');
   background-size: cover;
